image not showing issue fixed

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,7 +7,7 @@
   
   /* Hero Section */
   .hero {
-    background-image: url('https://i.imgur.com/tK3oVnM.jpeg');
+    background-image: url('https://wallpapercave.com/wp/wp14833186.webp');
     background-size: cover;
     background-position: center;
     padding: 100px 20px;
